[package]
name = "nnat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "^1.0.50"
anyhow = "^1.0.75"
s2n-quic = { path = "../s2n-quic/quic/s2n-quic" }
clap = { version = "^4", features = ["derive"] }
s2n-quic-rustls = { version = "^0.31.0" }
rustls = { version = "^0.21", features = ["quic", "dangerous_configuration"] }
tokio = { version = "^1", features = ["full"] }
hyper = { version = "^1", features = ["full"] }
h2 = "^0.4.0"
h3 = '^0.0.3'
bytes = "^1"
futures = "^0.3.29"
tokio-util = "^0.7.10"
s2n-quic-core = "^0.31.0"
s2n-quic-h3 = { path = "../s2n-quic/quic/s2n-quic-h3" }
r2d2 = "^0.8.10"
pin-project-lite = "^0.2.4"
http = "1"
http-body-util = "^0.1.0"
tracing = "^0"
http-body = "^1"
