[package]
name = "nnat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
s2n-quic = { path = "../s2n-quic/quic/s2n-quic" }
clap = { version = "^4", features = ["derive"] }
s2n-quic-rustls = { version = "0.35.1" }
rustls = { version = "^0.21", features = ["quic", "dangerous_configuration"] }
tokio = { version = "^1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
pin-project = "1"
tower = { version = "0.4", features = ["make"] }
axum = "0.7"
